--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Im 26 yrs old and work in Santa Ana, CA for a Metal Finsihing Compnay as a Data Analyst</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in California, but I grew up in Chicago, IL.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I am an avid baseball fan (GO CUBS!), and like to look at cool data visualization wether geo spatial or straigt stats</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Owning a business that provides useful data projections</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Currently, I live in the city of Santa Ana, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to develop my own programs and tools to capture, disseminate, and visualize data effectively.</p>
     </section>
 
     <footer id="footer">
